syntax = "proto3";

// Import the empty protodef since our chat message functions may not return or get a type.
import "google/protobuf/empty.proto";

// The namespace of the file.
option csharp_namespace = "ChatterShared";

// the package
package chatter;

// The chatter service definition.
service Chatter {
  // Sends a message. Once the message is sent, it's added to a list in the server.
  rpc SendMessage (Message) returns (google.protobuf.Empty);

  // Tell the client to update messages from the server. Will re-run every so often.
  rpc UpdateSubscriptions (google.protobuf.Empty) returns (MessageList);

  // This pings the server to make sure it's on.
  rpc Ping (Message) returns (Message);
}

// The message containing the user's name and message. All that is needed to handle a single message.
message Message {
  string username = 1;
  string text = 2;
}

// The list of messages currently stored in our server. 
// "repeated" is the definition for a list of values in proto3.
message MessageList {
  repeated string messages = 1;
}
